// Vitest Snapshot v1

exports[`<GameCell> > renders cell with no tile 1`] = `
<div
  class=""
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`<GameCell> > renders cell with tile 1`] = `
<div
  class=""
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile fly"
    title="Player-1 fly"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        class="creature"
        href="#fly"
      />
    </svg>
  </div>
</div>
`;

exports[`<GameCell> renders cell with no tile 1`] = `
<div
  class=""
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`<GameCell> renders cell with tile 1`] = `
<div
  class=""
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile fly"
    title="Player-1 fly"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        class="creature"
        href="#fly"
      />
    </svg>
  </div>
</div>
`;
